Fixed collapsing sections in case of low height mobile phones

--- a/style/about-project.css
+++ b/style/about-project.css
@@ -92,6 +92,7 @@
         display: flex;
         flex-direction: column;
         margin-top: 40px;
+        height: auto;
     }
     
     .AboutProjectSection> :nth-child(1){
